MDEV-16095 Oracle-style placeholder inside GROUP BY..WITH ROLLUP breaks replication